--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,11 @@
       <artifactId>guava</artifactId>
       <version>14.0</version>
     </dependency>
-
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
