--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
       <artifactId>joda-time</artifactId>
       <version>2.10.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
+    <dependency>
+      <groupId>org.apache.zookeeper</groupId>
+      <artifactId>zookeeper</artifactId>
+      <version>3.4.6</version>
+    </dependency>
+
   </dependencies>
 
   <build>
